--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment",
+  "name": "sanchari-exam-2",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.0.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
@@ -16,11 +15,8 @@
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.2",
+    "mongoose": "^8.3.5",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.0",
-    "uuid": "^9.0.1"
+    "nodemon": "^3.1.0"
   }
 }
