--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.2.0",
     "concurrently": "^8.2.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -23,7 +24,9 @@
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.3.5",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "universal-cookie": "^7.1.4"
+    "universal-cookie": "^7.1.4",
+    "uuid": "^9.0.1"
   }
 }
